--- a/MapDiffBot/Resources/DmmTools.resx
+++ b/MapDiffBot/Resources/DmmTools.resx
@@ -119,6 +119,6 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="dmm_tools" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\SpacemanDMM\target\debug\dmm-tools.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\..\SpacemanDMM\target\release\dmm-tools.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
